<resources>
    <string name="app_name">Quiz Creator</string>
    <string name="enter_game">Enter quiz</string>
    <string name="registration">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="button_reg">Registration</string>
    <string name="alreadyhave">Already have an account? Log in</string>
    <string name="enter">Enter</string>
    <string name="enterpin">Enter ID</string>
    <string name="login">Log in</string>
    <string name="creategame">Create quiz</string>
    <string name="warning1">You have to sign up or log in first</string>
    <string name="title">Game title</string>
    <string name="savegame">Save quiz</string>
    <string name="addquestiom">Add question</string>
    <string name="mygames">My quizzes</string>
    <string name="questiontext">Question text</string>
    <string name="addimage">Add image</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="timer">Timer</string>
    <string name="notitle">No title</string>
    <string name="addpfp">Add profile image</string>
    <string name="author">Author: </string>
    <string name="members">Members: </string>
    <string name="qnum">Questions number: </string>
    <string name="pin">ID: </string>
    <string name="gamenotstarted">The quiz has not started</string>
    <string name="gamestarted">The quiz is on</string>
    <string name="warning2">The quiz is not found</string>
    <string name="of">of</string>
    <string name="notregistrated">Not registered</string>
    <string name="results">Results:</string>
    <string name="wait">Wait until the quiz is started...</string>
    <string name="alreadystarted">The quiz has already started</string>
    <string name="notexist">The quiz with such ID does not exist</string>
    <string name="checkfields">Check the fields to be filled in</string>
    <string name="cantaccess">Cant access the quiz</string>
    <string name="zagruzka">Loading...</string>
    <string name="addquestion">Add at least 2 questions</string>
    <string name="deletingin">Deleting the quiz in</string>
    <string name="xseconds">seconds</string>
    <string name="answers">Answers: </string>
    <string name="emptystr">Empty </string>
    <string name="lang">Language </string>

    <string name="rus">Russian </string>
    <string name="eng">English </string>
    <string name="pol">Polish </string>
    <string name="chooselang">Choose language </string>

    <string name="myfinishedgames">Completed games </string>
    <string name="ostalos">Time left: </string>

    <string name="sekund">seconds</string>
</resources>