<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/salatowy">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/addpfp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilepic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_shape"></de.hdodenhof.circleimageview.CircleImageView>

        <EditText
            android:padding="10dp"
            android:hint="@string/username"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape2"
            android:layout_marginBottom="10dp"></EditText>

        <EditText
            android:padding="10dp"
            android:hint="@string/password"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape2"
            android:layout_marginBottom="10dp"></EditText>

        <EditText
            android:padding="10dp"
            android:hint="@string/email"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape2"
            android:layout_marginBottom="10dp"></EditText>

        <androidx.appcompat.widget.AppCompatButton
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/volumablebtn"
            android:text="@string/registration"
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAllCaps="false"></androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/alreadyhave"
            android:id="@+id/already_have_account"
            android:layout_marginTop="10dp"
            android:textAlignment="center"></TextView>
    </LinearLayout>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateDrawable="@drawable/progressbat"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>