<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/salatowy">

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape2"
            android:hint="@string/email"
            android:padding="10dp"></EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape2"
            android:hint="@string/password"
            android:padding="10dp"></EditText>


        <androidx.appcompat.widget.AppCompatButton
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/volumablebtn"
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/login"
            android:textAllCaps="false"></androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/regestration"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/registration"
            android:textAlignment="center"></TextView>
    </LinearLayout>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateDrawable="@drawable/progressbat"></ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>