<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/shape6"
    android:paddingHorizontal="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:textStyle="bold"
            android:text="Название: "
            android:id="@+id/titleItem"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="19dp"></TextView>

        <TextView
            android:layout_below="@+id/titleItem"
            android:textStyle="bold"
            android:text="@string/author"
            android:id="@+id/authorItem"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="19dp"></TextView>

        <TextView
            android:layout_below="@+id/authorItem"
            android:textStyle="bold"
            android:text="@string/members"
            android:id="@+id/playersItem"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="19dp"></TextView>

        <TextView
            android:layout_below="@+id/playersItem"
            android:textStyle="bold"
            android:text="@string/qnum"
            android:id="@+id/qnumItem"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="19dp"></TextView>

        <TextView
            android:layout_below="@+id/qnumItem"
            android:textStyle="bold"
            android:text="@string/pin"
            android:id="@+id/pinItem"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="19dp"></TextView>

        <TextView
            android:layout_below="@+id/pinItem"
            android:textStyle="bold"
            android:text="is started"
            android:id="@+id/startedItem"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="19dp"
            android:layout_marginBottom="10dp"></TextView>
    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/temno_salatowy"
        android:src="@drawable/baseline_play_arrow_24"
        app:tint="@color/white">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_alignParentRight="true"
        android:id="@+id/deleteGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startGame"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/red"
        app:tint="@color/white"
        android:src="@drawable/baseline_delete_24">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</RelativeLayout>