<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/title"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp"></TextView>

            <EditText
                android:layout_below="@id/textView"
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape4"
                android:paddingHorizontal="10dp"
                android:text="@string/notitle"></EditText>

            <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:layout_below="@+id/editText"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerView"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/volumablebtn"
                    android:id="@+id/save_game_btn"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:text="@string/savegame"
                    android:layout_marginRight="10dp"
                    android:textAllCaps="false"
                ></androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/add_question_btn"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:text="@string/addquestiom"
                    android:background="@drawable/volumablebtn"
                    android:textAllCaps="false"></androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>
        </RelativeLayout>


    </ScrollView>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateDrawable="@drawable/progressbat"></ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>