<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/questionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/questiontext"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <EditText
                android:id="@+id/editText_qt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/questionText"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/shape4"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionText"></EditText>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/timer"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageButton"></TextView>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"></Spinner>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/addimage"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editText_qt"></TextView>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape3"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"></ImageButton>

            <RelativeLayout
                android:id="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape6"
                android:minHeight="60dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner">

                <EditText
                    android:id="@+id/edittext1"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape6"
                    android:hint="@string/answer1"
                    android:minHeight="45dp"
                    android:paddingHorizontal="10dp"></EditText>

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"></CheckBox>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape6"
                android:minHeight="60dp"
                app:layout_constraintTop_toBottomOf="@+id/rel1">

                <EditText
                    android:id="@+id/edittext2"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape6"
                    android:hint="@string/answer2"
                    android:minHeight="45dp"
                    android:paddingHorizontal="10dp"></EditText>

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"></CheckBox>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape6"
                android:minHeight="60dp"
                app:layout_constraintTop_toBottomOf="@+id/rel2">

                <EditText
                    android:id="@+id/edittext3"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape6"
                    android:hint="@string/answer3"
                    android:minHeight="45dp"
                    android:paddingHorizontal="10dp"></EditText>

                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"></CheckBox>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape6"
                android:minHeight="60dp"
                app:layout_constraintTop_toBottomOf="@+id/rel3">

                <EditText
                    android:id="@+id/edittext4"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape6"
                    android:hint="@string/answer4"
                    android:minHeight="45dp"
                    android:paddingHorizontal="10dp"></EditText>

                <CheckBox
                    android:id="@+id/checkbox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"></CheckBox>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rel4">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/volumablebtn"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"></androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_question_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/volumablebtn"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"></androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateDrawable="@drawable/progressbat"></ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>